--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/aalok.jpg" alt="">
+                        <img src="images/aalok.JPG" alt="">
                         <div class="text">आलोक बजगाई</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
