--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <!-- Created By Narayan Bajagain -->
 <html lang="en">
 <head>
+    <script>
+        window.oncontextmenu=function(){
+            console.log("Right click Disabled");
+            return false;
+        }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
@@ -14,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
-<body oncontextmenu="return false">
+<body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
