--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Narayan Bajagain -->
+<!-- Created By Narayan Bajagain ==-->
 <html lang="en">
 <head>
     <script>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <!-- home section start -->
+    <!-- Home section start -->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -104,7 +104,7 @@
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">My Skills</h2>
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
