--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Narayan Bajagain ==-->
+<!-- Created By Narayan Bajagain -->
 <html lang="en">
 <head>
     <script>
